--- a/simple/pom.xml
+++ b/simple/pom.xml
@@ -71,6 +71,18 @@
 					</descriptors>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<!-- put your configurations here -->
+					<source>1.6</source>
+					<target>1.6</target>
+					<encoding>GBK</encoding>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
