add FtpUtil in longUtils

--- a/longUtils/src/main/resources/log4j.properties
+++ b/longUtils/src/main/resources/log4j.properties
@@ -5,7 +5,7 @@ log4j.appender.console.layout=org.apache.log4j.PatternLayout
 log4j.appender.console.layout.ConversionPattern=%p %c %d{yyyy-MM-dd HH:mm:ss} - %m%n
 
 log4j.appender.log=org.apache.log4j.RollingFileAppender
-log4j.appender.log.File=D:/qunarspider/logs/longUtils.log
+log4j.appender.log.File=../logs/longUtils.log
 log4j.appender.log.MaxFileSize=10240KB
 log4j.appender.log.MaxBackupIndex=10
 log4j.appender.log.layout=org.apache.log4j.PatternLayout 
