--- a/longUtils/pom.xml
+++ b/longUtils/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>edu.bupt</groupId>
 	<artifactId>longutis</artifactId>
-	<version>1.0</version>
+	<version>1.0.1</version>
 	<packaging>jar</packaging>
 
 	<name>longutis</name>
@@ -127,6 +127,18 @@
 			<artifactId>lucene-analyzers</artifactId>
 			<version>3.2.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>xalan</groupId>
+			<artifactId>xalan</artifactId>
+			<version>2.7.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>nekohtml</groupId>
+			<artifactId>nekohtml</artifactId>
+			<version>1.9.6</version>
+		</dependency>
 		<!-- utils end -->
 
 		<!-- jdbc driver -->
@@ -136,6 +148,14 @@
 			<version>5.1.16</version>
 		</dependency>
 		<!-- jdbc driver end -->
+
+		<!-- threadpool utils -->
+		<dependency>
+			<groupId>proxool</groupId>
+			<artifactId>proxool</artifactId>
+			<version>0.8.3</version>
+		</dependency>
+		<!-- threadpool utils end -->
 
 	</dependencies>
 
